--- a/index.html
+++ b/index.html
@@ -77,18 +77,10 @@
 </header>
 
 <body style="max-height: 15vh;">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    
     <!-- ------------------------------------------------------------------- -->
 
-  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center" style="padding-top:20%;">
     <div class="col">
       <div class="card mb-4 rounded-3 shadow-sm">
         <div class="card-header py-3">
