--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ We also wait for you on Saturdays at noon, for coffee.
       <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="bi bi-twitter"></i></a> -->
       
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" mailto href="ipmslanus@gmail.com" role="button"><i class="bi bi-envelope-at"></i></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="mailto:ipmslanus@gmail.com" role="button"><i class="bi bi-envelope-at"></i></a>
 
       <!-- Instagram -->
       <a class="btn btn-outline-light btn-floating m-1" href="https://www.instagram.com/ipmslanus/" role="button"><i class="bi bi-instagram"></i>
