--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <h4 class="my-0 fw-normal">Trabajos</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">Trabajo de IPMS Lanus<small class="text-body-secondary fw-light">/nanoSeg</small></h1>
+          <h1 class="card-title pricing-card-title">Trabajo de IPMS Lanus<small class="text-body-secondary fw-light"><!-- /nanoSeg --></small></h1>
           <div class="card shadow-sm">
             <center>
               <img width="70%" src="TRABAJOS.jpg" style="padding-top: 10%;">
@@ -125,7 +125,7 @@
           <h4 class="my-0 fw-normal">Fotos</h4>
         </div>
         <div class="card-body">
-          <h1 class="card-title pricing-card-title">Fotos del club<small class="text-body-secondary fw-light">/Seg</small></h1>
+          <h1 class="card-title pricing-card-title">Fotos del club<small class="text-body-secondary fw-light"><!-- /nanoSeg --></small></h1>
           <div class="card shadow-sm">
 
             <center>
@@ -137,9 +137,9 @@
           </div>
           <ul class="list-unstyled mt-3 mb-4">
             <li>Unite</li>
-            <li></li>
+            <!-- <li></li>
             <li>Priority email support</li>
-            <li>Help center access</li>
+            <li>Help center access</li> -->
           </ul>
           <button type="button" class="w-100 btn btn-lg btn-primary">Seguinos</button>
         </div>
